--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@
 }
 $font-color-primary: grey;
 $font-color-secondary: white;
-$main-color: #0093D5;
+$main-color: #49B749;
 
 #border {
   border: 1px solid black;
@@ -57,6 +57,7 @@ $main-color: #0093D5;
   color: $font-color-secondary;
   font-weight: bold;
   font-size: 25px;
+  background-color: $main-color;
 }
 
 .center {
