Comments added not to modify files when making a new sushi

--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -2,6 +2,10 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+
+//DO NOT MODIFY THIS FILE WHILE MAKING A NEW SUSHI
+
+
 a,
 abbr,
 acronym,
